# mummer-extras

./: LICENSE  Makefile.am  README.md  delta.5.md  mummer-extras.7.md  mummersnps2vcf
src/: Makefile.am  mummer-snps2vcf
test/: Makefile.am  snps2vcf.test
test/data/: consecutives.pass.vcf  consecutives.qry.fasta  consecutives.ref.fasta  general.fasta
